portfolio/main.css
body {
    margin: 0;
    display: grid;
    grid-template-areas: "header header""sidebar main";
    grid-template-columns: 300px 1fr;
    grid-template-rows: 300px 1fr;
    font-family: "Helvetica LT Std", sans-serif;
    background-color: whitesmoke;
}

header {
    background: linear-gradient(-45deg, rgba(24, 24, 24, 0) 0%,rgba(63, 63, 63, 0.685) 100%);
    background-color: black;
    color: whitesmoke;
    grid-area: header;
    text-align: center;
    line-height: 300px;
    font-size: 50pt;
    font-weight: 100;
}

.header {
    grid-column: 2;
    grid-row: 1;
    color: whitesmoke;
    text-align: center;
    line-height: 300px;
    font-size: 50pt;
    font-weight: 100;
}

aside {
    grid-area: sidebar;
    font-weight: bold;
    color: whitesmoke;
    line-height: 6em;
    background-color: #313131;
}

a{
    text-decoration: none !important;
}

ul {
    position:sticky;
    list-style-type: none;
    top: 10px;;
    padding-left: 0;
    margin: 0;

}

li {
    --bar-height: 80px; 
    text-align: center;
    line-height: var(--bar-height);
    height: var(--bar-height);
    color: whitesmoke;
    font-weight: 100;
    font-size: 18pt;
}

li:hover {
    background-color: #5c5c5c;
    transition: .05s ease-in-out;
}

#main {
    grid-area: main;
    margin-bottom: 150px;
}


.content {
    justify-self: center;
    margin: auto auto;
    margin-top: 75px;
    position: relative;
    text-align: center;
    max-width: 850px;
    width: 80%;
}

.content > img {
    display: block;
    margin: auto auto;
    width: 100%;
    max-width: 850px;

}

.content-header{
    margin-top: 75px;
    font-size: 28pt;
    font-weight: 100;
    display: inline-block;
    font-style: italic;
    color: rgb(151, 151, 151);
}

#wrapper{
    text-align: center;
}

.regular{
    font-weight: 500;
}


.desc{
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;
        font-size: 1.8vw;
        padding: 20px;
        width: 80%;
        max-width: 600px;
        word-wrap: break-word;
        text-align: center;
        line-height: 1.6em;
        color: whitesmoke;
        text-shadow: 0 2px 3px black;
        font-weight: 100;   
}

.small{
    font-size: 1.6vw
}

.overlay{
    margin: 0 0;
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 1;
    transform: translate(-50%, -50%);
    width: 100%;
    max-width: 850px;
    background-color: rgba(0, 0, 0, 0.75);
    height: 100%;
}

.content:hover .desc, .content:hover .overlay{
    opacity: 100;
    transition: .1s ease-in;
}

.content:hover img{
    filter: drop-shadow(0 20px 12px rgba(0,0,0, 0.2)) blur(2px) ;
    transition: filter .1s ease-in;
    transition: -webkit-filter .1s ease-in;
    
}

.content img{
    -webkit-filter: drop-shadow(0 20px 20px rgba(0,0,0, 0.2));
    filter: drop-shadow(0 20px 20px rgba(0,0,0, 0.2));
    transition: filter .1s ease;
    transition: -webkit-filter .1s ease;
}

.content .desc, .content .overlay{
    opacity: 0;
    transition: .1s ease;
}



@media only screen and (max-width: 768px){
    
    body{
        grid-template-areas: 
        "header"
        "sidebar"
        "main";
        grid-template-columns: 1fr;
        grid-template-rows: 300px auto 1fr;
    }

    .header{
        grid-area: header;
        font-size: 32pt;
        
    }
    aside {
        padding-top: 0;
    }
    
    ul {
        display: block;
    }
    
    li {
        --bar-height: 70px;
        list-style-type: none;
        text-align: center;
        line-height: var(--bar-height);
        height: var(--bar-height);

    }

    .desc{
        font-size: 140%;
    }

    .small{
        font-size: 120%;
    }

    .very-small{
        font-size: 85%;
    }


}

